trying to fix extra space in background

--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ html,body {
     background-size: cover;
 }
 
-body {
-    
-}
 
 .titlebar {
     color: rgb(19, 12, 6);
